# itr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  example.earth
config/: ITRConfig.h.in
include/: abstractphotoview.h  animationspline.h  bbox3d.h  controlpoint.h  exif.h  gridsampler.h  jsonexporter.h  panophotoview.h  photoview.h  preloadarearangecallback.h  sfmloader.h  util.h
include/egl/: eglcapabilities.h  pixelbufferegl.h
include/terrainsampling/: displayequirecttexture.h  equirectcamerabuilder.h  rendertoimagecamera.h  terrainrenderer.h  windowcapturecallback.h
patches/: LICENSE.txt
patches/OpenSceneGraph/osgViewer/: GraphicsWindowCocoa.mm
patches/openMVG/: CMakeLists.txt  InterfaceMVS.h
patches/osgearth/: Capabilities
scripts/: build-fedora.sh  build-macos.sh
src/: CMakeLists.txt  animationspline.cpp  bbox3d.cpp  controlpoint.cpp  gridsampler.cpp  jsonexporter.cpp  main.cpp  panophotoview.cpp  photoview.cpp  sfmloader.cpp
src/egl/: pixelbufferegl.cpp
src/terrainsampling/: displayequirecttexture.cpp  equirectcamerabuilder.cpp  terrainrenderer.cpp
